@@ -1,4 +1,5 @@
 debian/extra/global_prefs_override.xml  etc/boinc-client
-debian/extra/gui_rpc_auth.cfg   etc/boinc-client
-debian/extra/remote_hosts.cfg   etc/boinc-client
-debian/tmp/usr/bin/boinc_cmd    usr/bin
+debian/extra/gui_rpc_auth.cfg           etc/boinc-client
+debian/extra/remote_hosts.cfg           etc/boinc-client
+debian/extra/update-boinc-applinks      usr/bin
+debian/tmp/usr/bin/boinc_cmd            usr/bin
