@@ -1,2 +1,3 @@
 boinc_client.1
 boinc_cmd.1
+update-boinc-applinks.1
