@@ -1,0 +1,155 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<!--
+ This is the manual page for update-boinc-applinks, a tool that creates/removes
+ symlinks for anonymous platform applications and their associated app_info.xml
+ files in a given BOINC data directory.
+
+ This file is licensed under the terms of the GNU General Public License,
+ Version 2 or any later version published by the Free Software Foundation.
+
+ Copyright © 2006 Debian BOINC Maintainers
+-->
+
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
+"file:///usr/share/xml/docbook/schema/dtd/4.2/docbookx.dtd" [
+
+  <!ENTITY dhgroupname "Debian BOINC Maintainers">
+  <!ENTITY dhgroupmail "<email>pkg-boinc-devel@lists.alioth.debian.org</email>">
+
+  <!ENTITY dhbinary    "update-boinc-applinks">
+  <!ENTITY dhdate      "<date>March 05, 2006</date>">
+
+  <!ENTITY debian      "<productname>Debian</productname>">
+  <!ENTITY gnu         "<acronym>GNU</acronym>">
+  <!ENTITY gpl         "&gnu; <acronym>GPL</acronym>">
+]>
+
+<refentry>
+  <refentryinfo>
+    <address>
+      &dhgroupmail;
+    </address>
+    <author>
+      <firstname>Frank</firstname>
+      <lastname>Thomas</lastname>
+      <email>frank@thomas-alfeld.de</email>
+    </author>
+    <copyright>
+      <year>2006</year>
+      <holder>&dhgroupname;</holder>
+    </copyright>
+    &dhdate;
+  </refentryinfo>
+
+  <refmeta>
+    <refentrytitle>&dhbinary;</refentrytitle>
+    <manvolnum>1</manvolnum>
+  </refmeta>
+
+  <refnamediv>
+    <refname>&dhbinary;</refname> 
+    <refpurpose>create/remove symbolic links for anonymous BOINC
+      applications</refpurpose>
+  </refnamediv>
+
+  <refsynopsisdiv>
+    <cmdsynopsis>
+      <command>&dhbinary;</command>
+      <arg><replaceable>options</replaceable></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsect1>
+    <title>DESCRIPTION</title>
+    <para>&dhbinary; creates (or removes) symbolic links for anonymous BOINC
+      applications and their associated app_info.xml files in a given BOINC
+      data directory.</para>
+    <para>Note: &dhbinary; is an extension for &debian; users and is only
+      available in &debian;'s boinc-client package.</para>
+  </refsect1>
+
+  <refsect1>
+    <title>OPTIONS</title>
+    <para>For a full summary of options, run <command>&dhbinary;
+      --help</command>.</para>
+
+    <variablelist>
+      <varlistentry>
+        <term><option>-h, --help</option></term>
+        <listitem>
+          <para>Show help message and all options.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><option>--create</option></term>
+        <listitem>
+          <para>Create symbolic links and project directories.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><option>--remove</option></term>
+        <listitem>
+          <para>Remove symbolic links and empty project directories.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>
+          <option>--data-dir=<replaceable>DIR</replaceable></option>
+        </term>
+        <listitem>
+          <para>Manage symbolic links in the given directory
+            <replaceable>DIR</replaceable>. If this option is not present,
+            <replaceable>DIR</replaceable> defaults to the current working
+            directory.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>
+          <option>--project=<replaceable>PROJECT</replaceable></option>
+        </term>
+        <listitem>
+          <para>Manage symbolic links only for the given project
+            <replaceable>PROJECT</replaceable>.
+            Run <command>&dhbinary; --list-projects</command> to get a list
+            of projects for which anonymous applications are available and
+            therefore can be replaced with
+            <replaceable>PROJECT</replaceable>. If this option is not present,
+            &dhbinary; will manage symbolic links for all available
+            projects.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>
+          <option>--list-projects</option>
+        </term>
+        <listitem>
+          <para>Show a list of projects for which anonymous applications are
+            available. Normally those applications are provided by packages
+            called boinc-app-<replaceable>PROJECT</replaceable>
+            (e.g. boinc-app-seti).</para>
+        </listitem>
+      </varlistentry>
+
+    </variablelist>
+  </refsect1>
+
+  <refsect1>
+    <title>AUTHOR</title>
+    <para>Written by Frank S. Thomas.</para>
+  </refsect1>
+
+  <refsect1>
+    <title>COPYRIGHT</title>
+    <para>Copyright &copy; 2006 &dhgroupname;.</para>
+    <para>
+      This is free software; you can redistribute it and/or modify it under the
+      terms of the &gnu; General Public License, Version 2 or any later version
+      published by the Free Software Foundation.</para>
+  </refsect1>
+</refentry>
