@@ -72,6 +72,7 @@ pre-build-stamp:
 	docbook2x-man debian/manpages/boinc_client.xml
 	docbook2x-man debian/manpages/boinc_cmd.xml
 	docbook2x-man debian/manpages/boincmgr.xml
+	docbook2x-man debian/manpages/update-boinc-applinks.xml
 	touch $@
 
 build: pre-build build-stamp
@@ -107,7 +108,8 @@ clean-patched: clean-boinc-client
 	dh_clean \
 	  boinc_client.1 \
 	  boinc_cmd.1 \
-	  boincmgr.1
+	  boincmgr.1 \
+	  update-boinc-applinks.1
 	  
 	dh_clean \
 	  api/Makefile.in \
@@ -186,6 +188,7 @@ binary-arch: build install-arch
 	dh_strip -a
 	dh_compress -a
 	dh_fixperms -a
+	dh_python -a
 	dh_installdeb -a
 	dh_shlibdeps -a
 	dh_gencontrol -a
